welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:4: error: type mismatch;
 found   : Unit
 required: Int
    nbTeen=nbTeen+1
          ^countTeen:3: error: type mismatch;
 found   : Unit
 required: Int
  if (13<=a && a<=19){
  ^