welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
  var nbTeen : Int = 0
  if (13<=a && a<=19){
    nbTeen=nbTeen+1
  }
}